--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sandbox",
+  "homepage": "https://sergey-banduryn.github.io/notedly-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
