--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -41,6 +41,9 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+        env:
+          VITE_API_URI_PROD: ${{ vars.VITE_API_URI_PROD }}
+        
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
